--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -7,7 +7,7 @@
     <p class="home-text-two">Losing isn't the end—it's where the best stories begin. Death Diaries is a blog dedicated to the hilarious,
     heartbreaking, and unforgettable defeats we face in games. Whether you were crushed by a boss fight, betrayed by a party
     member, or watched your favorite character fall to permadeath—we want the tale.</p>
-    <a class="home-link" href="#">
+    <a class="home-link" href="#Kinds">
         <p class="home-btn-text">Read the Latest Diary</p>
      </a>
   </div>
@@ -74,6 +74,170 @@
             /img/featured/mob@2x.png 2x
            " media="(max-width: 1438px)" />
             <img class="boy-img" src="/img/featured/mob.png" alt="Boy" loading="lazy" />
+        </picture>
+    </div>
+</section>
+<!-- Kinds of Pain We Cover Swiper-->  
+<article class="kinds-section" id="Kinds">
+    <div class="container kinds-container">
+        <h2 class="kinds-title">Kinds of Pain We Cover</h2>
+        <div class="swiper kinds-swiper">
+            <div class="swiper-wrapper kinds-swiper-wrapper">
+                <div class="swiper-slide kinds-swiper-slide">
+             <div class="kinds-wrapper">
+                <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                <div class="kinds-text-wrapper">
+                    <h3 class="kinds-title-slide">Save Scum Shame</h3>
+                    <p class="kinds-text-slide">when the reload button doesn’t fix the guilt</p>
+                </div>
+             </div>
+            <div class="kinds-wrapper kinds-wrapper-two">
+                <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                <div class="kinds-text-wrapper">
+                    <h3 class="kinds-title-slide">Tactical Tragedies</h3>
+                    <p class="kinds-text-slide">lost units, lost wars</p>
+                </div>
+            </div>
+                 </div>
+                <div class="swiper-slide kinds-swiper-slide">
+                    <div class="kinds-wrapper">
+                        <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                        <div class="kinds-text-wrapper">
+                            <h3 class="kinds-title-slide">Boss Fails & Rage Quits</h3>
+                            <p class="kinds-text-slide">when your controller almost didn’t survive</p>
+                        </div>
+                    </div>
+                    <div class="kinds-wrapper kinds-wrapper-two">
+                        <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                        <div class="kinds-text-wrapper">
+                            <h3 class="kinds-title-slide">Narrative Grief</h3>
+                            <p class="kinds-text-slide">when the story hit harder than expected</p>
+                        </div>
+                    </div>
+                 </div>
+                    <div class="swiper-slide kinds-swiper-slide">
+                        <div class="kinds-wrapper">
+                            <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                            <div class="kinds-text-wrapper">
+                                <h3 class="kinds-title-slide">Multiplayer Mayhem</h3>
+                                <p class="kinds-text-slide">public humiliation, friendly fire, betrayal</p>
+                            </div>
+                        </div>
+                        <div class="kinds-wrapper kinds-wrapper-two">
+                            <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                            <div class="kinds-text-wrapper">
+                                <h3 class="kinds-title-slide">Visual Novels & Bad Endings</h3>
+                                <p class="kinds-text-slide">when you said the wrong thing</p>
+                            </div>
+                        </div>
+                 </div>
+                <div class="swiper-slide kinds-swiper-slide">
+                    <div class="kinds-wrapper">
+                        <img src="/img/kinds/slide.png" alt="head" loading="lazy" width="35" height="40">
+                        <div class="kinds-text-wrapper">
+                            <h3 class="kinds-title-slide">Rogue-likes & Permadeath</h3>
+                            <p class="kinds-text-slide">when progress is erased</p>
+                        </div>
+                    </div>
+                 </div>
+                 
+            </div>
+        </div>
+            <div class="custom-pagination">
+                <div class="pagination-item active"></div>
+                <div class="pagination-item"></div>
+                <div class="pagination-item"></div>
+                <div class="pagination-item"></div>
+            </div>
+        <div class="custom-navigation kinds-nav">
+            <button class="custom-arrow kinds-custom-prev" aria-label="Previous slide">
+                <svg class="arrow" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M34.7173 42.6399L22.3595 29.9992L35.0002 17.6415" stroke="#2EC9CC" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+            </svg>
+            </button>
+        
+            <button class="custom-arrow kinds-custom-next" aria-label="Next slide">
+                <svg class="arrow" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M34.7173 42.6399L22.3595 29.9992L35.0002 17.6415" stroke="#2EC9CC" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
+            </button>
+        </div>
+    </div>
+</article>
+<!-- We Learn More When We Die -->
+<section class="learn-section">
+    <div class="container learn-container">
+        <h2 class="leard-title">We Learn More When We Die</h2>
+        <div class="learn-text-wrapper">
+            <p>Victory is satisfying—but loss? Loss is instructive, emotional, and weirdly poetic. The best games make you care about
+            what’s at stake. And when you lose, you feel it.<br/>
+            Whether it's the silence after your final breath in Inside, the slow descent in Return of the Obra Dinn, or the tactical
+            tragedy in XCOM—you remember those moments.</p>
+            <p>We write to preserve them.
+            </p>
+        </div>
+        <picture>
+            <source srcset="
+            /img/learn/desk.png 1x,
+            /img/learn/desk@2x.png 2x
+            " media="(min-width: 1439px)" />
+            <source srcset="
+            /img/learn/mob.png 1x,
+            /img/learn/mob@2x.png 2x
+           " media="(max-width: 1438px)" />
+            <img class="learn-img" src="/img/learn/mob.png" alt=" Death Diaries" loading="lazy" />
+        </picture>
+    </div>
+</section>
+<!-- Tell Us How You Died -->
+<section class="tell-section">
+    <div class="container">
+        <h2 class="tell-title">Tell Us How You Died</h2>
+        <p class="tell-text">Have a death worth documenting? Share your fail. We feature player-submitted diary entries every week. Funny, dramatic,
+        awkward, or devastating—we want them all.<br/>
+        <span class="tell-span">Note:</span>  All submissions are reviewed and edited with care.
+        </p>
+        <a class="home-link tell-link" href="#Kinds">
+            <p class="home-btn-text">Submit Your Story</p>
+        </a>
+    </div>
+</section>
+<!-- The Hall of Glorious Failure -->
+<section class="hall-section">
+    <div class="container">
+        <h2 class="hall-title">The Hall of Glorious Failure</h2>
+        <ul class="hall-list">
+            <li class="hall-item">
+                <img class="featured-img" src="/img/quotes.png" alt="quotes" loading="lazy">
+                <p>Stuck in Skyrim’s final cave with no healing and no arrows</p>
+            </li>
+            <li class="hall-item">
+                <img class="featured-img" src="/img/quotes.png" alt="quotes" loading="lazy">
+                <p>My Minecraft base blew up because I named my creeper ‘Kevin’</p>
+            </li>
+            <li class="hall-item">
+                <img class="featured-img" src="/img/quotes.png" alt="quotes" loading="lazy">
+                <p>Lost a 45-hour save in Persona 5 when I overwrote the wrong slot</p>
+            </li>
+            <li class="hall-item">
+                <img class="featured-img" src="/img/quotes.png" alt="quotes" loading="lazy">
+                <p>Tried to stealth in Hitman. Accidentally launched a fire extinguisher at a priest.</p>
+            </li>
+        </ul>
+        <a class="featured-link" href="#Home">
+            <p class="featured-btn-text">View Full Hall of Fame</p></a>
+        <picture>
+            <source srcset="
+            /img/hall/desk.png 1x,
+            /img/hall/desk@2x.png 2x
+            " media="(min-width: 1439px)" />
+            <source srcset="
+            /img/hall/mob.png 1x,
+            /img/hall/mob@2x.png 2x
+           " media="(max-width: 1438px)" />
+            <img class="hall-img" src="/img/hall/mob.png" alt="Girl" loading="lazy" />
         </picture>
     </div>
 </section>
