--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,64 @@
-.footer {
-  padding: 20px 0;
+.footer-container{
+  padding: 20px 15px 15px;
 }
-.footer-desc {
-  text-align: center;
+.footer-wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  font-size: 16px;
 }
-.footer-link {
-  position: relative;
+.footer-text-one{
+  font-weight: 700;
 }
-.footer-link::before {
-  content: '';
-  position: absolute;
-  bottom: 6%;
-  left: 50%;
-  transform: translateX(-50%) skewX(-12deg);
-  z-index: -1;
-  width: 110%;
-  height: 24%;
-  background-color: #41d1ff;
-  transition: 200ms ease;
+.footer-mail{
+  font-weight: 400;
+}
+.footer-img{
+  margin: 35px auto;
+}
+.footer-navigation{
+  display: flex;
+  gap: 120px;
+  row-gap: 15px;
+  flex-wrap: wrap;
+}
+.footer-link{
+  padding: 8px;
+    width: 112px;
+    height: 32px;
+    font-size: 14px;
+}
+.footer-text-three{
+  margin-top: 50px;
+  margin-bottom: 25px;
+  font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+}
+.footer-text{
+  font-size: 16px;
+    text-align: center;
+}
+@media only screen and (min-width: 1439px) {
+ .footer-container{
+  padding: 24px 72px;
+ }
+ .footer-wrapper{
+  width: 416px;
+ }
+ .footer-img{
+  margin-top: -110px;
+ }
+ .footer-navigation{
+  width: 248px;
+  margin-right: 0;
+  margin-left: auto;
+  margin-top: -180px;
+  gap: 24px;
+  row-gap: 8px;
+ }
+ .footer-text-three{
+  margin-top: 130px;
+  margin-bottom: 16px;
+ }
 }
