--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,27 @@
 <footer class="footer">
-  <div class="container">
-
+  <div class="container footer-container">
+    <div class="footer-wrapper">
+      <p class="footer-text-one">Send a Signal from the Afterlife</p>
+      <p>Want to collaborate, pitch an article, or confess a game sin? Reach out.</p>
+<p class="footer-text-one">Email: 
+      <a class="footer-mail" href="mailto:info@adventurelose.site">info@adventurelose.site</a></p>
+    </div>
+    <img class="footer-img" src="/img/footer/footer.png" alt="Logo icon" loading="lazy" width="73" height="131">
+    <ul class="footer-navigation">
+      <li class="footer-link">
+        <a class="footer-underline" href="Privacy Policy.html">Privacy Policy</a>
+      </li>
+          <li class="footer-link">
+        <a class="footer-underline" href="Cookies Policy.html">Cookies Policy</a>
+      </li>
+      <li class="footer-link">
+        <a class="footer-underline" href="Terms and Conditions.html">Terms of Use</a>
+      </li>
+      <li class="footer-link">
+        <a class="footer-underline" href="#Inbox">Submit a Death</a>
+      </li>  
+    </ul>
+    <p class="footer-text-three">Death Diaries is a player-run project fueled by pixels, mistakes, and the desire to document digital mortality</p>
+    <p class="footer-text">© 2025 adventurelose.site — All rights reserved</p>
   </div>
 </footer>
